# workshops

./: .gitignore
PrototipoProyectoFinal/: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
PrototipoProyectoFinal/data/: README.md
PrototipoProyectoFinal/models/: README.md
PrototipoProyectoFinal/scripts/: build_dataset.py  build_lsc70_sequences.py  capture_samples.py  download_kaggle_lsc_alphabet.py  download_lsc70.py  run_opencv_demo.py  train_model.py
PrototipoProyectoFinal/src/lsc_alphabet/: __init__.py  config.py  dataset.py  labels.py  landmarks.py  lsc70.py  predictor.py  sequences.py  stabilizer.py  training.py  visualization.py
PrototipoProyectoFinal/tests/: test_labels.py  test_landmarks.py  test_lsc70.py  test_stabilizer.py
proyectos_computacion_visual_emprendimiento/: propuesta.docx
semana_03_2_zbuffer_depth_testing/: README.md
semana_03_3_calculo_visualizacion_normales/: package-lock.json  package.json
semana_03_4_etapas_pipeline_programable/: README.md  Readme.md
semana_04_2_modelos_color_percepcion/: readme.md
semana_04_3_modelos_reflexion_pbr/: README.md
semana_04_4_conversion_espacios_color/: README.md
semana_05_1_materiales_pbr_unity_threejs/: readme.md
semana_05_2_modelado_procedural_basico/: Readme.md
semana_05_3_shaders_basicos_unity_threejs/: README.md
semana_05_4_texturizado_dinamico_shaders_particulas/: README.md
semana_05_5_uv_mapping_texturas/: README.md
semana_06_1_animacion_ai_unity/: README.md
semana_06_2_animaciones_esqueleto_fbx_gltf/: README.md
semana_07_4_escenas_parametricas/: README.md
(+322 files in other folders)
